# SATLIN

./: CMakeLists.txt  CODE_OF_CONDUCT.md  ClipBoardUI.cpp  ClipBoardUI.h  Constants.h  EmojiBoardUI.cpp  EmojiBoardUI.h  EmojiGenerator.cpp  EmojiGenerator.h  EmojiWidget.cpp  EmojiWidget.h  EmojiboardUI.cpp  IconManager.cpp  IconManager.h  ImageManagerInterface.cpp  ImageManagerInterface.h  ItemWidget.cpp  ItemWidget.h  MasterWindow.cpp  MasterWindow.h  README.md  TextEditor.cpp  TextEditor.h  TextManagerInterface.cpp  TextManagerInterface.h  main.cpp
ManagerSources/: AudioManagerInterface.cpp  AudioManagerInterface.h  IconManager.cpp  IconManager.h  ImageManagerInterface.cpp  ImageManagerInterface.h  TextManagerInterface.cpp  TextManagerInterface.h
Resources/: resources.qrc
Ui/: ClipBoardInterface.cpp  ClipBoardInterface.h  ClipBoardUI.cpp  ClipBoardUI.h  EmojiBoardUI.cpp  EmojiBoardUI.h  EmojiPanelInterface.cpp  EmojiPanelInterface.h  MasterWindow.cpp  MasterWindow.h  TextEditor.cpp  TextEditor.h
Util/: Constants.h  DataModels.h  EmojiGenerator.cpp  EmojiGenerator.h  HashGenerator.cpp  HashGenerator.h  ItemRepository.cpp  ItemRepository.h  MimeDataAnalyzer.cpp  MimeDataAnalyzer.h
Widgets/: AudioCard.cpp  AudioCard.h  AudioWidget.cpp  AudioWidget.h  EmojiWidget.h  ImageWidget.cpp  ImageWidget.h  ItemWidget.cpp  ItemWidget.h  TextWidget.cpp  TextWidget.h
